Fixed sign up by removing overflow hidden on html and body css

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,3 @@
-html,
-body {
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-}
 body {
   background-color: #fff;
   font-family: 'Helvetica Neue', sans-serif;
